fixed spacing around buttons

--- a/common/src/css/style.less
+++ b/common/src/css/style.less
@@ -1,7 +1,7 @@
 html, body, #root, #root > div {
     background-color: #9e9e9e;
     min-height: 100vh;
-    min-width: 100vw;
+    max-width: 100vw;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -15,4 +15,9 @@ nav {
 
 #full-page {
     min-height: 90vh;
+}
+
+#list {
+    overflow: auto;
+    max-height: 75vh
 }
